all themes: Mate Panel: Fix align with CheckBoxes in applet popup menu

--- a/desktop-themes/Menta/gtk-3.0/mate-applications.css
+++ b/desktop-themes/Menta/gtk-3.0/mate-applications.css
@@ -426,6 +426,11 @@ window.background, /* selector where outlines are writen on GtkTrayIcon */
     color: shade (@theme_fg_color, 1.00);
 }
 
+/* checkboxes in applet popup menu */
+.mate-panel-menu-bar menu > menuitem > box > menuitem {
+    padding: 0px 0px 0px 4px;
+}
+
 /* WnckPager */
 PanelApplet.wnck-applet .wnck-pager {
     color: shade (@theme_selected_bg_color, 1.05);
